[doyto-query-r2dbc] fix deprecation